Updated view activity to show comments of Activity